--- a/index.html
+++ b/index.html
@@ -1,93 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<!-- Mirrored from discordgift.site/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 09 Mar 2021 22:22:09 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<script src="cdn-cgi/apps/head/HXw0h5SfnWxa-EHg2vWHnXkrJUA.js"></script><link rel="stylesheet" href="../cdn.jsdelivr.net/gh/Nouridio/Discord-bot-website-template%40master/src/css/bootstrap.min.css">
-<link rel="stylesheet" href="../cdn.jsdelivr.net/gh/Nouridio/Discord-bot-website-template%40master/src/css/main.css">
-<link rel="stylesheet" href="../cdn.jsdelivr.net/gh/Nouridio/Discord-bot-website-template%40master/src/css/now-ui-kit.css">
-<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,800,900&amp;display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900&amp;display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Lato:300,400,600,700,800,900&amp;display=swap" rel="stylesheet">
-<meta property="og:site_name" content="A WILD GIFT APPEARS!">
-<meta property="og:title" content="DiscordGift.site">
-<meta property="og:image" content="/logo.png">
-<meta property="og:description" content="Expires in 48 hours">
-<meta name="theme-color" content="#000000">
-<link rel="icon" type="image/png" href="logo.png" />
-<title>DiscordGift.site</title>
-<script async src='cdn-cgi/bm/cv/669835187/api.js'></script></head>
-<body>
-<nav class="navbar navbar-expand-lg bg-transparent">
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<img src="https://cdn.jsdelivr.net/gh/Nouridio/Discord-bot-website-template@master/src/assets/menuIcon.svg" width="20px" height="20px" style="max-width: none !important;">
-</button>
-<img src="logo.png" width="50" height="50">
-<div class="collapse navbar-collapse" id="navbarSupportedContent" style="margin-left: 20px !important">
-<ul class="navbar-nav mr-auto">
-<li class="nav-item active">
-<a class="nav-link" href="#/">Home <span class="sr-only">(current)</span></a>
-</li>
-</ul>
-<button class="btn login-btn btn-outline-accent my-2 my-sm-0" style="font-size: 10px !important;font-family: poppins !important;" onclick="if (!window.__cfRLUnblockHandlers) return false; window.location.href = 'generate.html';" data-cf-modified-fb77dc3902b3ed41d904cb6b-="">GENERATE</button>
-</div>
-</nav>
-<div class="heading">
-<h1 class="display-5 title">A fake nitro gift link to rick roll your friends.</h1>
-<p class="subtitle">DiscordGift.site is a fake nitro link generator, design for discord users to rick roll their friends.</p>
-<a class="btn btn-primary btn-lg" href="generate.html" target="_blank" role="button">Get started</a>
-<br /><br /><br /><br /><br /><br />
-</div>
-<div class="features">
-<div class="title">Why use nitro.gq</div>
-<div class="subtitle">We provide you the best reasons to use DiscordGift.site!</div>
-<div class="cards">
-<div class="card" style="width: 18rem;">
-<div class="card-body">
-<h5 class="card-title">You can rick roll your friends</h5>
-<p class="card-text">rick rolling your friends is cool.</p>
-</div>
-</div>
-<div class="card" style="width: 18rem;">
-<div class="card-body">
-<h5 class="card-title">You can rick roll your friends</h5>
-<p class="card-text">rick rolling your friends is cool.</p>
-</div>
-</div>
-<div class="card" style="width: 18rem;">
-<div class="card-body">
-<h5 class="card-title">You can rick roll your friends</h5>
-<p class="card-text">rick rolling your friends is cool.</p>
-</div>
-</div>
-</div>
-</div>
-<div class="page_end">
-<div class="start">
-<div class="card">
-<div class="card-body gs-card">
-<div class="title">Ready to try DiscordGift.site?</div>
-<br />
-<a class="btn btn-primary btn-lg" href="generate.html" role="button">Get started</a>
-</div><br />
-</div>
-</div>
-<div class="footer">
-<div class="bot-footer">
-<img src="logo.png" width="150"><br />
-Copyright © DiscordGift.site - 2020
-</div><br />
-<div class="nouridio">design by <a href="https://twitter.com/Nouridio"> nouridio</a></div>
-</div>
-</div>
-<script src="../code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous" type="fb77dc3902b3ed41d904cb6b-text/javascript"></script>
-<script src="../cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous" type="fb77dc3902b3ed41d904cb6b-text/javascript"></script>
-<script src="../stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" type="fb77dc3902b3ed41d904cb6b-text/javascript"></script>
-<script src="../cdn.jsdelivr.net/gh/Nouridio/Discord-bot-website-template%40master/src/js/now-ui-kit.min.js" type="fb77dc3902b3ed41d904cb6b-text/javascript"></script>
-<script src="../ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="fb77dc3902b3ed41d904cb6b-|49" defer=""></script><script type="text/javascript">(function(){window['__CF$cv$params']={r:'62d7b34d487cd78d',m:'9137bccf58b929d00438445341b0c28e891e4326-1615328529-1800-Ad8vJMcHouxyVavumYVZC6o3E2DGHtUKQTYuAlUAFaZKlofnUipd56RSj5YobUfTotnbUdyjmcBOU55y21rkiIDitzI4zq4oa5TzUdfB0mDhc65F44fyafoosWTtZrSAKA==',s:[0xbd341c888e,0x50360c8fda],}})();</script></body>
-
-<!-- Mirrored from discordgift.site/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 09 Mar 2021 22:22:15 GMT -->
-</html>
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=https://dsc.gg/frostt"><TITLE>Daar's Community</TITLE>
+</HEAD>
+<BODY>
+<A HREF="https://dsc.gg/frostt"><h3>Daar's Community...</h3></A>
+</BODY>
+</HTML>
