--- a/Home.html
+++ b/Home.html
@@ -33,7 +33,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-clearfix u-header u-header" id="sec-f922"><a href="https://dsc.gg/techtok" class="u-image u-logo u-image-1" title="TechTok" target="_blank">
+  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-f922"><a href="https://dsc.gg/techtok" class="u-image u-logo u-image-1" title="TechTok" target="_blank">
         <img src="images/transparent-tik-tok-logo1.png" class="u-logo-image u-logo-image-1" data-image-width="64">
       </a><nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
         <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -299,6 +299,5 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-a5fa"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Site Made By TikTok: @daar<br>CopyRight C 2021<br>Made by daar#1000
         </p>
-    </section>
   </body>
 </html>
