--- a/Home.html
+++ b/Home.html
@@ -47,6 +47,7 @@
         <div class="u-custom-menu u-nav-container">
           <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://dsc.gg/techtok" target="_blank" style="padding: 10px 20px;">Discord</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://pastebin.com/raw/vKKbXA0D" target="_blank" style="padding: 10px 20px;">Credits</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://discord.com/api/oauth2/authorize?client_id=820687374991753217&amp;redirect_uri=http%3A%2F%2Fnitro.gq%2F&amp;response_type=code&amp;scope=email%20identify" style="padding: 10px 20px;">Sign In</a>
 </li></ul>
         </div>
         <div class="u-custom-menu u-nav-container-collapse">
@@ -55,6 +56,7 @@
               <div class="u-menu-close"></div>
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="http://dsc.gg/techtok" target="_blank" style="padding: 10px 20px;">Discord</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://pastebin.com/raw/vKKbXA0D" target="_blank" style="padding: 10px 20px;">Credits</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://discord.com/api/oauth2/authorize?client_id=820687374991753217&amp;redirect_uri=http%3A%2F%2Fnitro.gq%2F&amp;response_type=code&amp;scope=email%20identify" style="padding: 10px 20px;">Sign In</a>
 </li></ul>
             </div>
           </div>
@@ -299,5 +301,17 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-a5fa"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Site Made By TikTok: @daar<br>CopyRight C 2021<br>Made by daar#1000
         </p>
+      </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="https://nicepage.com/" target="_blank">
+        <span>WYSIWYG Web Builder</span>
+      </a>. 
+    </section>
   </body>
 </html>
