--- a/Home.html
+++ b/Home.html
@@ -47,7 +47,7 @@
         <div class="u-custom-menu u-nav-container">
           <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="http://dsc.gg/techtok" target="_blank" style="padding: 10px 20px;">Discord</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://pastebin.com/raw/vKKbXA0D" target="_blank" style="padding: 10px 20px;">Credits</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://discord.com/api/oauth2/authorize?client_id=820687374991753217&amp;redirect_uri=http%3A%2F%2Fnitro.gq%2F&amp;response_type=code&amp;scope=email%20identify" style="padding: 10px 20px;">Sign In</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="" style="padding: 10px 20px;">Signed In</a>
 </li></ul>
         </div>
         <div class="u-custom-menu u-nav-container-collapse">
@@ -56,7 +56,7 @@
               <div class="u-menu-close"></div>
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="http://dsc.gg/techtok" target="_blank" style="padding: 10px 20px;">Discord</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://pastebin.com/raw/vKKbXA0D" target="_blank" style="padding: 10px 20px;">Credits</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://discord.com/api/oauth2/authorize?client_id=820687374991753217&amp;redirect_uri=http%3A%2F%2Fnitro.gq%2F&amp;response_type=code&amp;scope=email%20identify" style="padding: 10px 20px;">Sign In</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="" style="padding: 10px 20px;">Signed In</a>
 </li></ul>
             </div>
           </div>
